--- a/simple.html
+++ b/simple.html
@@ -4,7 +4,7 @@ Copyright 2014 Git.Training
 
 -->
 <head>
-	<title>An Example Website</title>
+	<title>A very respectful Website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -18,11 +18,11 @@ Copyright 2014 Git.Training
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			I 'm not sure what will go here, but I 'm sure it will be nice.
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Khushbu Virani </p>
 	</footer>
 </body>
 </html>
